@@ -39,5 +39,7 @@ WriteMakefile(
         'Test::Deep'      => 0,
         'Test::Exception' => 0.40,
         'Test::NoWarnings' => 0,
+        'Test::FailWarnings' => 0,
+        'HTTP::Status' => 0,
     },
 );
